Wrote some more

--- a/references.bib
+++ b/references.bib
@@ -110,6 +110,14 @@
   publisher	= {IOS Press}
 }
 
+@Manual{allaire2024,
+    title = {quarto: R Interface to 'Quarto' Markdown Publishing System},
+    author = {JJ Allaire and Christophe Dervieux},
+    year = {2024},
+    note = {R package version 1.4.4},
+    url = {https://CRAN.R-project.org/package=quarto},
+  }
+
 @Article{	  aparicio2015,
   title		= {Data visualization},
   author	= {Aparicio, Manuela and Costa, Carlos J},
