--- a/problems.Rmd
+++ b/problems.Rmd
@@ -14,9 +14,9 @@ When creating visualizations, it is rarely the case that we can plot the raw dat
 
 Take, for instance, the typical barplot. There are several steps to drawing a barplot. First, we have to divide the data into parts, based on the levels of some categorical variable. Second, we need to summarize or aggregate each part by some metric, usually either sum or count. Third, we need to take these summaries and map them to visual encodings, such as x-axis position, y-axis position, and length. Finally, we use these encodings to render the individual bars as rectangles on a computer screen [see e.g. @franconeri2021].
 
-These four steps - partitioning, aggregation, encoding, and rendering - are common to all data visualization systems, be they static or interactive. However, interactivity does present some unique challenges, since user interaction may affect any of the four stages. As a result, the changes may need to be propagated throughout the entire pipeline. Finding a general and efficient way to implement this propagation remains an open research topic [@wickham2009; @franconeri2021]. Consequently, discussions of interaction within the context of the data visualization pipeline are often fairly vague [see @dimara2019; @wu2024].
+These four steps - partitioning, aggregation, scaling/encoding, and rendering - are common to all data visualization systems, be they static or interactive. However, interactivity does present some unique challenges, since user interaction may affect any of the four stages. As a result, the changes may need to be propagated throughout the entire pipeline. Finding a general and efficient way to implement this propagation remains an open research topic [@wickham2009; @franconeri2021]. Consequently, discussions of interaction within the context of the data visualization pipeline are often fairly vague [see @dimara2019; @wu2024].
 
-In the next few sections, I will try to address this conceptual ambiguity by discussing the four fundamental steps of the data visualization pipeline in depth, and exploring challenges related to their implementation in interactive systems. Ultimately, my goal is to demonstrate that integrating interaction into certain parts of the pipeline, particularly the aggregation step, is more complex than commonly acknowledged. Further, if the goal is to build truly generic and robust interactive data visualization systems, this complexity must be addressed [see also @wu2024].
+This chapter tries to address some of this conceptual ambiguity. It is organized in a way to mirror the data visualization pipeline, discussing each of the four steps in depth, and exploring challenges related to their implementation in interactive systems. Ultimately, my goal is to demonstrate that integrating interaction into certain parts of the pipeline, particularly the aggregation step, is more complex than commonly acknowledged. Further, if the goal is to build truly generic and robust interactive data visualization systems, this complexity must be addressed [see also @wu2024].
 
 ## Partitioning
 
@@ -24,7 +24,7 @@ The first step of any data visualization pipeline is to divide the data into par
 
 This partitioning operation fairly intuitive for aggregate plots (e.g. typical barplots and histograms), where each object represents multiple rows of the data. However, even one-to-one representations of the data (e.g. scatter plots and parallel coordinate plots), can be viewed this way, specifically, as slicing the table of $n$ rows into $n$ smaller tables of one row each. Similarly, plots with a single geometric object (e.g. a radar plot) can be considered as taking the entire data set as the one and only subset.
 
-Thus, the process of splitting our data into subsets may appear straightforward. However, it does raise two fundamental questions:
+Thus, the process of splitting our data into subsets may appear fairly straightforward. However, it does raise two fundamental questions:
 
 - How much of the original data should the subsets contain?
 - What should be the relationship between the subsets?
@@ -68,7 +68,7 @@ Either way, data hiding is something we should be mindful of. Unless there is a 
 
 > "Graphics are for comparison - comparison of one kind or another - not for access to individual amounts." [@tukey1993]
 
-An interesting yet underappreciated fact is that in many common visualization types, geometric objects tend to represent disjoint subsets of the data. That is, in most plots, each point, bar, line, or polygon represents a unique set of data points (rows of the data), with no overlap with other objects within the same graphical layer. This practice, despite being so common to border on a rule, is rarely given much attention.
+An interesting yet underappreciated fact is that in many common visualization types, geometric objects tend to represent disjoint subsets of the data. That is, in most plots, each point, bar, line, or polygon corresponds a unique set of data points (rows of the data), with no overlap with other objects within the same graphical layer. While different layers can represent the same data (e.g., a smooth fit over a scatterplot, or point clouds over boxplots), objects within the same layer rarely represent the same data. This practice, despite being so common to border on a rule, it is surprisingly seldom discussed.
 
 There are of course counter-examples. For instance, certain visualizations of set-typed data "double up" the contribution of data subsets, such that the same subset of the data may appear in multiple objects [see e.g. @alsallakh2013; @alsallakh2014; @conway2017; @lex2014]. However, these types of visualizations are fairly rare, and represent the exception rather than the norm. When we see a barplot, we typically expect each bar to represent a unique set of cases.   
 
@@ -333,9 +333,9 @@ knitr::include_graphics("./figures/spineplot-tree.png")
 
 In \@ref(fig:spineplot-tree), each vertical level represents a data partition, and arrows indicate relationships between data subsets, such that a bar subset is composed of segment subsets, and the whole data set is in turn composed of bar subsets. This same tree can be used to represent both barplots and spineplots. For a stacked barplot, this tree structure can be implicit, since we can work with the lowest level of the partitioning only (the segments; ignoring details such as maintaining correct stacking order). However, for spineplots, this hierarchical structure is essential. In spineplots, we apply transformations *across* the levels of the hierarchy: we need to normalize the statistics corresponding to each segment by the values within the parent bar. This is only possible if each segment can reference its parent bar in some way.
 
-Thus, we need a way for thinking about the hierarchical relationships in our data. Furthermore, for reasons that will become clear later, it may be beneficial to introduce a more formal, mathematical framework for thinking about this hierarchy. A simple algebraic structures for encoding hierarchies is a preorder. 
+Thus, to be able to model a broad class of plots, we need a way to encode a hierarchical partitioning of our data. Furthermore, for reasons that will become clear later, it may be beneficial to introduce a more formal, mathematical framework for thinking about this hierarchy. A simple algebraic structures for encoding hierarchies is a preorder. 
 
-#### Plots as preorders
+#### Plots as preorders {#plots-as-preorders}
 
 A [preorder](#preorders) is a binary relation on a set $S$, generally denoted by $\leq$, that is both reflexive and transitive. In simpler terms, given a preordered set $S$, any two elements $a, b \in S$ either relate ($a \leq b$, meaning $a$ is "less than" $b$), or they do not relate at all. Further, the relation obeys some common sense properties: every element relates to itself (reflexivity), and if $a$ relates to $b$ and $b$ relates to $c$, then $a$ relates to $c$ as well (transitivity).
  
@@ -525,9 +525,9 @@ My conclusion diverges from @wilhelm2008. I contend that, while overlaying/stack
 
 Now it is finally time to discuss what makes certain statistics stackable. To do this, I will need to use some fundamental concepts from category theory. These concepts are described in greater detail in the [Appendix: Mathematical Theory](#mathematical-theory) - the reader is advised to consult this section if they are unfamiliar with the material (links to appropriate sections will also be provided throughout the following text).
 
-Let's briefly recap the key points so far. In section \@ref(partitioning), I advocated for modeling plots as a hierarchy of partitions. Specifically, starting with the full data set, we divide it into disjoint subsets, each corresponding to a geometric object. These subsets can then be further subdivided, representing parts of those objects (such as those resulting from linked selection). As discussed in Section \@ref(hierarchy), we end up with a tree-like structure that encodes this part-whole relationship, that can be best described as a preorder.
+Let's briefly recap the key points so far. In section \@ref(partitioning), I advocated for modeling plots as a hierarchy of partitions. Specifically, starting with the full data set, we divide it into disjoint subsets, each corresponding to a geometric object. These subsets can then be further subdivided, representing parts of those objects (such as those resulting from linked selection). As discussed in Section \@ref(hierarchy), we end up with a tree-like structure that encodes this part-whole relationship, which can be formally described as a preorder.
 
-Further, I have made the argument that, when summarizing our data, we should choose summary statistics which preserve this hierarchical, tree-like structure of our data. In Section \ref(stacking-not-graphical), I showed an example of visualizations which violate this structure, by stacking "unstackable" summary statistics, and pointed to others who have noted this problem. I have also showed that this property of being "stackable" is *not* unique to sums and counts.
+Further, I have made the argument that, when summarizing our data, we should choose summary statistics which preserve this hierarchical, part-whole structure of the data. In Section \ref(stacking-not-graphical), I showed an example of visualizations which violate this structure, by stacking "unstackable" summary statistics, and pointed to other researchers who have noted this problem. I have also showed that this property of being "stackable" is *not* unique to sums and counts.
 
 #### Generalizing preorders: Categories
 
@@ -561,7 +561,7 @@ One simple example of a category is a preorder. Specifically, it can be shown th
 - Reflexivity: that is just the identity morphism. For every $c \in \text{Ob}(\mathcal{C})$, we have $\text{id}_c : c \to c$
 - Transitivity: that is just composition of morphisms. Given $f: a \to b$ ($a \leq b$) and $g: b \to c$ ($b \leq c$), we can define $h: a \to c$ as $h = f \then g$ ($a \leq c$)
 
-In our concrete case of the preorder of data subsets ordered by inclusion, we can easily reuse the same diagram from Section [REFERENCE], that is, Figure \@ref(fig:barplot-preorder), and re-intepret it as a category:
+In our concrete case of the preorder of data subsets ordered by inclusion, we can easily reuse the same diagram from Section \@ref(plots-as-preorders), that is, Figure \@ref(fig:barplot-preorder), and re-intepret it as a category:
 
 ```{r}
 #| echo: false
@@ -782,7 +782,7 @@ We could achieve this by expanding our data range by some hard-coded percentage,
 
 \begin{equation}
 
-  s(d) = v_{min} + \bigg[ 0.1 + \frac{d - d_{min}}{d_{max} - d_{min}} \cdot 0.8 
+  s(d) = v_{min} + \bigg[ 0.1 + \frac{d - d_{min}}{d_{max} - d_{min}} \cdot (0.9 - 0.1) 
             \bigg] \cdot (v_{max} - v_{min}) 
   (\#eq:margins)
 
@@ -794,128 +794,140 @@ However, this design becomes prohibitive as more features are added. For example
 
 The linear mapping formula in Equation \@ref(eq:margins) can guide us in decomposing the scale function into smaller, more manageable parts. Let's look at it again:
 
-$$  s(d) = v_{min} + \bigg[ 0.1 + \frac{d - d_{min}}{d_{max} - d_{min}} \cdot 0.8 
+$$  s(d) = v_{min} + \bigg[ 0.1 + \frac{d - d_{min}}{d_{max} - d_{min}} \cdot (0.9 - 0.1) 
             \bigg] \cdot (v_{max} - v_{min}) $$
 
 If we look closely, we may be able to see that the function can be split into three parts:
 
-$$s(d) = \color{steelblue}{v_{min} +} \bigg[ \color{seagreen}{0.1 +} \color{indianred}{\frac{\color{black}{d} - d_{min}}{d_{max} - d_{min}}} \color{seagreen}{\cdot 0.8} \bigg] \color{steelblue}{\cdot (v_{max} - v_{min})}$$
+\begin{equation}
+
+s(d) = \color{steelblue}{v_{min} +} \bigg[ \color{seagreen}{0.1 +} \color{indianred}{\frac{\color{black}{d} - d_{min}}{d_{max} - d_{min}}} \color{seagreen}{\cdot (0.9 - 0.1)} \bigg] \color{steelblue}{\cdot (v_{max} - v_{min})}
+  
+(\#eq:scale-composition)
+
+\end{equation}
 
 That is, the linear mapping can be interpreted as a composition of three simpler functions:
 
-- $\color{indianred}{n(d) = (d - d_{min}) / (d_{max} - d_{min})}$ takes a data value $d \in D$ and maps it to the interval $[0, 1]$^[More on this below.]
-- $\color{seagreen}{r(p) = 0.1 + p \cdot 0.8}$ takes a value in $[0, 1]$ and maps it elsewhere in $[0, 1]$
-- $\color{steelblue}{u(p) = v_{min} + p \cdot (v_{max} - v_{min})}$ takes a value in $[0, 1]$ and maps it to a visual attribute value $v \in V$ 
+- $\color{indianred}{n_D(d) = (d - d_{min}) / (d_{max} - d_{min})}$ takes a data value $d \in D$ and maps it to the interval $[0, 1]$^[More on this below.]
+- $\color{seagreen}{r(p) = 0.1 + p \cdot (0.9 - 0.1)}$ takes a value in $[0, 1]$ and maps it elsewhere in $[0, 1]$
+- $\color{steelblue}{u_V(p) = v_{min} + p \cdot (v_{max} - v_{min})}$ takes a value in $[0, 1]$ and maps it to a visual attribute value $v \in V$ 
 
-In other words, instead of thinking of scale as mapping from $D$ to $V$ directly, we explicitly for
-
-This leads us to the following definition of a scale:
+In other words, instead of thinking of scale as mapping from $D$ to $V$ directly, we can break the mapping into three distinct steps. This leads us to the following definition of a scale:
 
 ::: {.definition #scale name="Scale as function composition"}
 
 A scale $s: D \to V$ can be created by composing:
 
 - A *data normalizing* function $n_D: D \to \mathbb{R}$, mapping data values to the real numbers $\mathbb{R}$
-- A linear *rescale* function $r_{\mathbb{R}}: \mathbb{R} \to \mathbb{R}$
+- A linear *rescale* function $r: \mathbb{R} \to \mathbb{R}$
 - An *visual attribute unnormalizing* function $u_V: \mathbb{R} \to V$, mapping real numbers to the visual attribute codomain
 
 Such that:
 
-$$s = u_V \circ r_{\mathbb{R}} \circ n_D$$
-Or, more explicitly:
-
-$$s(d) = u_V(r_{\mathbb{R}}(n_D(d)))$$
-
-Further, the normalize and unnormalize functions may at times have inverses (or retractions) such that, e.g. $(n_D)^{-1} = u_D: \mathbb{R} \to D$ and $(u_V)^{-1} = n_V: V \to \mathbb{R}$. These functions reverse the effect of their counterparts, such that $u_D \circ n_D = n_V \circ u_V = \text{id}$, the identity function. If both $u_D$ and $n_V$ exist, then we can define the inverse scale function:
-
-$$s^{-1}(v) = u_D(r_{\mathbb{R}}^{-1}(n_V(v)))$$
+$$s(d) = u_V(r(n_D(d)))$$
 :::
 
-(the rescale function always has an inverse, since it is just a simple linear map of the form $y = ax + b$)
+This is the proposed model of scales in a nutshell. However, there are several important points which bear explaining in more detail. 
 
-That concludes the high-level conceptual overview of this scale model. However, several points warrant further discussion.
+##### Reusability and discrete scales
 
-##### The extended unit interval
+First, by expressing scales as the composition of three functions, we gain the flexibility of three adjustable components. By choosing a specific data normalizing function $n_D$, a rescale function $r$, or visual attribute unnormalizing function $u_V$, we can express a wide range of scales. Further, by swapping only one or two of the components, we may be able to create entirely new scales while reusing a lot of the functionality.
 
-First, note that I described the functions as $n_D: D \to \mathbb{R}$ and $u_V: \mathbb{R} \to V$, i.e. I identified the intermediate domain as $\mathbb{R}$. However, provided that $d$ falls in some *typical* subset of data values (such as $[d_{\min}, d_{\max}]$ for continuous $D$), $n_D$ should *generally* return values in the unit interval $[0, 1]$ (and, conversely, $u_V$ should map values in $[0, 1]$ to typical values of the visual attribute). The reason why I define the intermediate domain as $\mathbb{R}$ instead of strictly $[0, 1]$ is to accommodate "unusual" (emphasis on the quotation marks) data or visual attribute values. 
+For instance, take the linear mapping from Equation \@ref(eq:scale-composition). To turn it into a discrete scale, we could simply replace the linear mapping normalize function $n_D(d) = (d - d_{\min}) / (d_{\max} - d_{\min})$ by some discrete mapping $n_D$:
 
-For instance, suppose we zoom into a region of a scatterplot and there is a point with its center just outside of the new plot limits. If the point's radius is greater than the distance of its center to the plot border, a part of the point will still overlap the plotting region and we should render it, even though the x- and y- coordinates lie outside the data range. Therefore, we use $\mathbb{R}$ as the intermediate domain instead of $[0, 1]$, though we can conceptually think of it as an "extended" unit interval $[0, 1]$, that I will denote as $[0, 1]'$.
+$$s(d) = v_{min} + \bigg[ 0.1 + n_D(d) \cdot (0.9 - 0.1) \bigg] \cdot (v_{max} - v_{min})$$
+For example, if our data takes on discrete values such that, e.g. $d \in \{ Berlin, Prague, Vienna \}$, one simple discrete mapping may be to place the discrete values at equidistant points along the $[0, 1]$ interval:
 
-The choice of $[0, 1]'$ is somewhat arbitrary - any interval $[a, b]$ with $a, b \in \mathbb{R}$ will work - however, it offers a convenient interpretation. Specifically, values $p \in [0, 1]'$ can be interpreted as percentages: for example, $n_D(d) = 0.5$ indicates data value is at the 50th percentile of the data range, and should, therefore, be generally mapped to the middle of the visual attribute range (other factors that we will discuss later aside). Values outside of $[0, 1]$ represent data values extending beyond the data range. For example, $n_D(d) = 1.2$ suggests that the data point lies 20% beyond the upper limit of the data range (provided that $D$ is continuous).
+$$n_D(d) = \begin{cases} 0.25 & \text{ if } d = Berlin \\ 0.5 & \text{ if } d = Prague \\ 0.75 & \text{ if } d = Vienna  \end{cases}$$
 
-Finally, note that the terms *normalizing* and *unnormalizing* are also arbitrary, however, I believe they make for useful labels. We can interpret them as 1D equivalent of vector normalization, mapping a one-dimensional vector in $D$ to and from the extended unit interval $[0, 1]'$.
+The function will then correctly map the discrete values in $D = \{ Berlin, Prague, Vienna \}$ to the interval given by $[v_{\min}, v_{\max}]$, with the 10% margins. Further, we could just as easily replace the unnormalizing function $u_V$ by some discrete mapping, provided we wanted to scale to some discrete visual attribute values (e.g. to a discrete colour palette). 
 
-##### Advantages
+##### The intermediate interval
 
-By expressing scales as the composition of two functions, we gain flexibility by having three adjustable components: the data domain $D$, the visual attribute codomain $V$, and the intermediate extended unit interval $[0, 1]' \subset \mathbb{R}$. As we will see, we can do quite a lot by manipulating and combining these three components. However, going forward, I believe it will be a lot easier to explain these ideas with code examples, rather than through mathematical formulas. Still, I will refer back to the mathematical definition above so it is important to keep it in mind.
+Second, note that in Definition \@ref(def:scale), the intermediate interval is identified as $\mathbb{R}$. This is technically correct, however, note that, for data values $d \in D$ which fall into some *typical* subset (such as $[d_{\min}, d_{\max}]$ for continuous $D$), $n_D$ should *generally* return values in the unit interval $[0, 1]$ (and, conversely, $u_V$ should map values in $[0, 1]$ to typical values of the visual attribute).
 
-#### A high-level model of scale implementation {#proposed-model}
+The reason why the intermediate interval is identified as $\mathbb{R}$ instead of $[0, 1]$ is because, at times, we may want to be able to map values which fall outside of the typical range of the data or the visual attribute. For instance, suppose we zoom into a region of a scatterplot and there is a point with its center just outside of the new plot limits. If the point's radius is greater than the distance of its center to the plot border, a part of the point will still overlap the plotting region and we should render it, even though the x- and y- coordinates lie outside the data range.
 
-To implement scales, we need to translate abstract mathematical objects such as sets $D$, $V$ and $[0, 1]'$ and mappings $n_D$ and $u_V$ to concrete programming constructs. In this section, I will briefly sketch out a high-level model of scales, as implemented in my package, simple TypeScript code (I use TypeScript instead of R because TypeScript's static typing is particularly useful for explaining some of the concepts here). Further, it's worth noting that this model of scales can be implemented in many different ways, depending on the programming paradigm. For instance, in the traditional object-oriented programming style (OOP), someone might design a `Scale` class and then instantiate it as a "smart" object with methods. Personally, I prefer the style of using independent types, data containers, and free functions. This is the style that I used while writing my package and so I will also use it here.
+However, for most intents and purposes, we can act as if the intermediate interval was $[0, 1]$. This is somewhat arbitrary - any interval $[a, b]$ with $a, b \in \mathbb{R}$ will work - however, $[0, 1]$ offers a convenient interpretation. Specifically, values $p \in [0, 1]$ can be interpreted as percentages: for example, $n_D(d) = 0.5$ indicates data value is at the 50th percentile of the data range, and should, therefore, be generally mapped to the middle of the visual attribute range (other factors that we will discuss later aside). Values outside of $[0, 1]$ represent data values extending beyond the data (visual attribute) range. For example, $n_D(d) = 1.2$ suggests that the data point lies 20% beyond the upper limit of the data range (provided that $D$ is continuous).
 
-First, we want some kind of object to describe a scale. Based on Definition [REFERENCE], a scale has to primarily incorporate two objects: the data *domain* and the visual attribute *codomain*: 
+Finally, note that the terms *normalizing* and *unnormalizing* are also arbitrary, however, I believe they make for useful labels. We can interpret them as 1D equivalent of vector normalization, mapping a one-dimensional vector in $D$ to and from the extended unit interval $[0, 1]$ (and vice-versa for $V$).
 
-```{ts}
-#| eval: false
+##### Implementing scale features via the intermediate interval
 
-interface Scale<D extends Expanse, V extends Expanse> {
-  domain: D
-  codomain: V 
-}
-```
+The three-component scale model becomes particularly useful when implementing many of the standard features of scales. Specifically, plot margins, as well as interactive features such as zooming and panning, can be implemented by manipulating the parameters of the rescale function $r$ only. This is advantageous for reuse, since these operations can apply homomorphically, independent of the data domain $D$ or the visual attribute codomain $V$.
 
-The angle brackets indicate generic type parameters. Specifically, `D` and `V` are type parameters which extend the `Expanse` type, and signify the type of the domain and codomain of the scale, respectively. I will explain the `Expanse` type below in more detail, however, for now, `D` could be, for example, a continuous expanse, corresponding to a $D = [d_{\max}, d_{\min}]$ for some $d_{\min}, d_{\max} \in \mathbb{R}$.
+###### Margins
 
-The primary use of a scale is to "push" values forward, first through its domain and second through its codomain, or "pull" them back, first through its codomain and second through its domain. We can describe this via the following two function signatures:
+One feature we have seen already implemented via the rescale function are plot margins. For example, suppose we want to implement margins on the x-axis scale. Starting with a simple "identity" rescale function:
 
-```{ts}
-#| eval: false
-function pushforward<D extends Expanse, V extends Expanse>(scale: Scale<D, V>, value: D["value_type"]): V["value_type"]
-function pullback<D extends Expanse, V extends Expanse>(scale: Scale<D, V>, value: V["value_type"]): D["value_type"]
-```
+$$r(p) = p$$
 
-The function signatures are fairly long because of the generic type parameters, however, they are actually very simple. The `pushforward` function simply takes a scale and a value that matches the scale's `domain` (the `D["value_type"]` refers to an opaque property access returns the type of values that `domain` operates on) and returns values in the scales `codomain`. Conversely, the `pullback` function simply takes a scale and a value in its `codomain`, and translates it to the scale's `domain`.
+we can shift data values closer to the centre of visual attribute range by introducing "limits" into the rescale function. For example, to implement symmetric 10% margins on each side, we can rescale with $(0.1, 0.9)$ limits:   
 
-Now it is type to discuss `Expanse`. The `Expanse` supertype is actually very simple, even simpler than that of a `Scale`. It only has a single property, indicating the value type it operates on:
+$$r(p) = 0.1 + p \cdot (0.9 - 0.1)$$
 
-```{ts}
-#| eval: false
-interface Expanse {
-  value_type: unknown
-  // ^ Here, I use TypeScript's `unknown` type to indicate that `value_type` 
-  // could be anything. In practice, most of the time, this will be
-  // either `string` or `number`.
-}
-```
+However, the limits do not have to be symmetric. For example, we could implement a 10% left margin and 30% right margin like so:
 
-The `Expanse` type is defined by the following two function signatures:
+$$r(p) = 0.1 + p \cdot (0.7 - 0.1)$$
 
-```{ts}
-#| eval: false
-function normalize<T extends Expanse>(expanse: T, value: T["value_type"]): number
-function unnormalize<T extends Expanse>(expanse: T, value: number): T["value_type"]
-```
+Importantly, the margins are independent of the data domain $D$ and the visual attribute codomain $V$. As long as the data normalizing function correctly maps values $D \to \mathbb{R}$ and the visual attribute unnormalizing function correctly maps values $\mathbb{R} \to V$, the scale will correctly implement margins. 
 
-These correspond to the $n_{\cdot}$ and $u_{\cdot}$ functions above. Specifically, the `normalize` function takes in an expanse and a value that the expanse operates on (`T["value_type"]`) and converts it to a number (i.e. $p \in [0, 1]' = \mathbb{R}$), whereas the `unnormalize` function takes in an expanse and a number and converts it to the expanse's value type. Generally, these functions should be inverses of each other, or at least retractions, such that `unnormalize(exp, normalize(exp, x)) == x` and `normalize(exp, unnormalize(exp, p)) == p`.
+###### Panning
 
-As polymorphic functions, `normalize` and `unnormalize` could be implemented as methods bound to specific `Expanse` subtype, an overloaded functions with dynamic dispatch, or even via a simple switch statement. The specific approach really does not matter. The important point is that we can use `Expanse` subtypes for converting between values and numbers. Therefore, the `domain` and `codomain` actually do the majority of the work of a scale. For instance, with a bit of hand-waving that we will clarify later, we can implement a simplified version of the `pushforward` function as:
+Now, suppose we also want to pan the plot 25% to the right. Again, all we need to do is to change the parameters of the rescale function for the x-axis scale. For example, using the scale with 10% symmetric margins above, we can simply increment the scale limits by 0.25:
 
-```{ts}
-#| eval: false
-function pushforward<D extends Expanse, V extends Expanse>(scale: Scale<D, V>, value: D["value_type"]) {
-  const { domain, codomain } = scale
-  return unnormalize(codomain, normalize(domain, value))
-  // ^ Or `return codomain.unnormalize(domain.normalize(value))`, in traditional OOP style
-}
-```
+\begin{aligned}
 
-The simplified implementation of the `pushforward` function is almost identical, except that the order of `domain` and `codomain` is reversed.
+r(p) &= (0.1 + 0.25) + p \cdot [(0.9 + 0.25) - (0.1 + 0.25)] \\
+    &= 0.35 + p \cdot (1.15 - 0.35)
 
-So, to summarize, a `Scale` object has two important properties - `domain` and `codomain` - which are both of subtypes of type `Expanse`, and, in fact, the majority of actual work is done with/by these objects. As such, we should discuss the `Expanse` subtypes next. However, before we go on to do that, we should compare the implementation outlined above to other implementations of scales in existing data visualization systems.
+\end{aligned}
+
+
+Now, the "least" data point $d \in D$ will get mapped to 0.35 (10% margin + 25% to the right), whereas the "greatest" data point will get mapped to 1.15 (25% to the right - 10% margin). Notice that, again, this is entirely independent of $D$ and $V$. That is, for instance, we can pan a continuous scale the exact same way we can pan a discrete scale.
+
+###### Zooming
+
+Zooming can also be implemented entirely using the rescale function $r$. The key here is to notice that if we set the limits outside of $[0, 1]$, the scale essentially gets stretched such that the least and the greatest data values get mapped outside of the visual attribute range (leading to a zoom behavior). 
+
+For instance, setting the limits to $-(0.5, 1.5)$ effectively zooms into the middle 50% of the range, since the 25th percentile data value gets mapped to zero and the 75th percentile data value gets mapped to one:
+
+$$r(0.25) = -0.5 + 0.25 \cdot [1.5 - (-0.5)] = 0$$
+$$r(0.75) = -0.5 + 0.75 \cdot [1.5 - (-0.5)] = 1$$
+
+Care must be taken when zooming in the presence of pre-existing limits, such as those caused by margins or multiple levels of zoom. In that case, we need to re-normalize the new limits within the context of the current limits. Coming up with the right formula requires a bit of careful algebra; details of the algorithm are given in Section \@ref(scales).  
+
+##### Inverses
+
+Another advantage of the three component scale system is that if both $n_D$ and $u_V$ have inverses (or at least retractions), we can easily implement an inverse scale function. Specifically, let $(n_D)^{-1} = u_D$ and $(u_V)^{-1} = n_V$ such that $u_D: \mathbb{R} \to D$ and $n_V = V \to \mathbb{R}$, and $u_D \circ n_D = n_V \circ u_V = \text{id}$, the identity function. Then:
+
+$$s^{-1}(v) = u_D(r^{-1}(n_V(v)))$$
+
+(the inverse of the rescale function $r$, $r^{-1}$, effectively always exists, since the function is just a simple linear map)
+
+The inverse scale function allows us to go from the values of the visual attribute to the values of the data domain. This may be useful in certain situations, such as when we want to find the closest data point to a given x- and y-axis coordinate.
+
+However, as was mentioned above, $n_D$ and $u_V$ may not always have a full inverse. For example, such is the case with the discrete mapping $n_D$:
+
+$$n_D(d) = \begin{cases} 0.25 & \text{ if } d = Berlin \\ 0.5 & \text{ if } d = Prague \\ 0.75 & \text{ if } d = Vienna  \end{cases}$$
+We can construct a function which reverts the effect of $n_D$:
+
+$$u_D(p)^ = \begin{cases} Berlin & \text{ if } p = 0.25 \\ Prague & \text{ if } p = 0.5 \\ Vienna & \text{ if } p = 0.75  \end{cases}$$
+Such that $u_D(n_D(d)) = d$ for all $d \in D$. However, the converse is not necessarily true: it is not the case that $n_D(u_D(p)) = p$ for all $p \in \mathbb{R}$, since $u_D(p)$ is only defined for $p \in \{ 0.25, 0.5, 0.75 \}$. We could construct $u_D$ in such a way that it e.g. maps the intermediate value $p$ to the "closest" value in $D$, such that, e.g. $p < 0.375$ gets mapped to $Berlin$, $0.375 \leq p < 0.625$ gets mapped to $Prague$, and $p \geq 0.625$ get mapped to $Vienna$. This way, $u_D(p)$ will be defined for all $p \in \mathbb{R}$, however, it is still not the case that $n_D(u_D(p)) = p$ for all $p \in \mathbb{R}$. And such will be the case for any finite $D$, or more generally, any time the dimensionalities of $D$ and $V$ do not match. However, even when the functions have only a one-sided inverse (a retraction), the inverse scale function may still prove quite useful. 
+
+##### Scale transformations
+
+> "Transformation is a critical tool for visualization or for any other mode of data analysis
+because it can substantially simplify the structure of a set of data."
+> 
+> @cleveland1993, pp. 48
+
+
 
 #### Comparison to past implementations of scales
 
-Many popular data visualization systems implement a two-component model of scales similar to the one outlined in the previous section. For example, in `D3` [@bostock2011], scales are implemented in a functional style, such that the data domain and the visual attribute codomain are passed as tuples or arrays of values to a higher-order `scale*` function (such as `scaleLinear`, `scalePoint`, or `scaleBand`), which then returns a new function that can be used for scaling. The domain and codomain can also be modified afterwards, using the `scale*.domain` and `scale*.range` methods respectively (JavaScript functions are objects and can have other functions/methods attached to them). 
+Many popular data visualization systems implement a multi-component model of scales similar to the one outlined above, however, they typically omit the $r$ function and implement the $n_D$ and $u_V$ mappings quite differently. For example, in `D3` [@bostock2011], scales are implemented in a functional style, such that the data domain and the visual attribute codomain are passed as tuples or arrays of values to a higher-order `scale*` function (such as `scaleLinear`, `scalePoint`, or `scaleBand`), which then returns a new function that can be used for scaling. The domain and codomain can also be modified afterwards, using the `scale*.domain` and `scale*.range` methods respectively (JavaScript functions are objects and can have other functions/methods attached to them). 
 
 For illustration, here are few examples from the official documentation [@d3-scale2024]:
 
@@ -948,21 +960,9 @@ map = function(self, x, limits = self$get_limits()) {
 }
 ```
 
-However, an key difference between the models of scales discussed above, and the proposed model discussed in Section \@ref(proposed-model) is that, in both `D3` and `ggplot2`, the domain and codomain are of different types. Consequently, the packages' equivalents of the `normalize` and `unnormalize` functions have completely different implementations. In `D3`, internally, the functions used to translate from $D \to [0, 1]'$ are fundamentally different from those used to translate from $[0, 1]' \to V$. This difference is even more pronounced in `ggplot2`, where `limits` is a simple vector/tuple whereas `palette` is a function. 
+Thus, a key difference between the models of scales discussed above, and the model I propose, is that the domain and codomain are generally implemented as different types. In `D3`, internally, the functions used to translate from $D \to \mathbb{R}$ are fundamentally different from those used to translate from $\mathbb{R} \to V$. This difference is even more pronounced in `ggplot2`, where `limits` is a simple vector/tuple whereas `palette` is a function. 
 
-I contend that having two separate types for the domain and codomain has several disadvantages. First, it impedes code reuse, since we cannot simply use the same object in either place. Second, it complicates the mental model: the user has to hold a completely different concept for the domain and codomain in their head. Finally, the models of scales outlined above are designed to work in only one direction: from the data to the visual attribute. To go the other way around, from the visual attribute to the data, other, specialized functions have to be implemented.
+I contend that having different types for the domain and codomain has several disadvantages. First, it impedes code reuse, since we cannot simply use the same object in either place. Second, it complicates the mental model: the user has to hold a completely different concept for the domain and codomain in their head. Finally, the models of scales outlined above are designed to work in only one direction: from the data to the visual attribute. To go the other way around, from the visual attribute to the data, other, specialized functions have to be implemented.
 
-Instead, I propose a unified model where the domain and codomain differ only in the context they are used. This greatly simplifies code reuse and the mental model, as the same `Expanse` subtype can serve as either. Moreover, if the domain and codomain implement both `normalize` and `unnormalize` functions, constructing the inverse scale function is trivial. There are also several other advantages, which I will discuss in the following sections.
-
-#### Implementing margins, zooming, and panning
-
-Recall that, at the end of section \@ref(scales-composition), 
-
-#### Scale transformations
-
-> "Transformation is a critical tool for visualization or for any other mode of data analysis
-because it can substantially simplify the structure of a set of data."
-> 
-> @cleveland1993, pp. 48
-
+Instead, I propose a unified model where the data domain and visual attribute codomain differ only in the context they are used. Details will be discussed in Section \@ref(scales). 
 
