--- a/figures/barplot-preorder.tex
+++ b/figures/barplot-preorder.tex
@@ -3,15 +3,28 @@
 
 \begin{document}
 \begin{tikzcd}
-	&& {W} \\
-	& {B_1} & \ldots & {B_n} \\
-	{S_1} & {S_2} & \ldots & {S_{k - 1}} & {S_k}
-	\arrow["\subseteq", from=2-2, to=1-3]
-	\arrow["\subseteq"', from=2-4, to=1-3]
+	&&& D \\
+	& {B_1} && \ldots && {B_n} \\
+	{S_1} & {S_2} & {S_3} & \ldots & {S_{k - 2}} & {S_{k - 1}} & {S_{k}}
+	\arrow["\subseteq", from=2-2, to=1-4]
+	\arrow["\subseteq"', from=2-6, to=1-4]
 	\arrow["\subseteq", from=3-1, to=2-2]
-	\arrow["\subseteq"', from=3-2, to=2-2]
-	\arrow["\subseteq", from=3-4, to=2-4]
-	\arrow["\subseteq"', from=3-5, to=2-4]
+	\arrow["\subseteq", from=3-2, to=2-2]
+	\arrow["\subseteq"', from=3-3, to=2-2]
+	\arrow["\subseteq", from=3-5, to=2-6]
+	\arrow["\subseteq"', from=3-6, to=2-6]
+	\arrow["\subseteq"', from=3-7, to=2-6]
 \end{tikzcd}
+% \begin{tikzcd}
+% 	&& {W} \\
+% 	& {B_1} & \ldots & {B_n} \\
+% 	{S_1} & {S_2} & \ldots & {S_{k - 1}} & {S_k}
+% 	\arrow["\subseteq", from=2-2, to=1-3]
+% 	\arrow["\subseteq"', from=2-4, to=1-3]
+% 	\arrow["\subseteq", from=3-1, to=2-2]
+% 	\arrow["\subseteq"', from=3-2, to=2-2]
+% 	\arrow["\subseteq", from=3-4, to=2-4]
+% 	\arrow["\subseteq"', from=3-5, to=2-4]
+% \end{tikzcd}
 \end{document}
 
