--- a/figures/barplot-preorder2.tex
+++ b/figures/barplot-preorder2.tex
@@ -3,14 +3,16 @@
 
 \begin{document}
 \begin{tikzcd}
-	&& {W} \\
-	& {B_1} & \ldots & {B_n} \\
-	{S_1} & {S_2} & \ldots & {S_{k - 1}} & {S_k}
-	\arrow["- \cup (B_2 \cup \ldots B_n)", from=2-2, to=1-3]
-	\arrow["- \cup (B_1 \cup \ldots B_{n - 1})"', from=2-4, to=1-3]
-	\arrow["- \cup (S_2 \cup \ldots)", from=3-1, to=2-2]
-	\arrow["- \cup (S_1 \cup \ldots)"', from=3-2, to=2-2]
-	\arrow["- \cup (\ldots \cup S_k)", from=3-4, to=2-4]
-	\arrow["- \cup (\ldots \cup S_{k - 1})"', from=3-5, to=2-4]
+	&&& D \\
+	& {B_1} && \ldots && {B_n} \\
+	{S_1} & {S_2} & {S_3} & \ldots & {S_{k - 2}} & {S_{k - 1}} & {S_{k}}
+	\arrow["\cup", from=2-2, to=1-4]
+	\arrow["\cup"', from=2-6, to=1-4]
+	\arrow["\cup", from=3-1, to=2-2]
+	\arrow["\cup", from=3-2, to=2-2]
+	\arrow["\cup"', from=3-3, to=2-2]
+	\arrow["\cup", from=3-5, to=2-6]
+	\arrow["\cup"', from=3-6, to=2-6]
+	\arrow["\cup"', from=3-7, to=2-6]
 \end{tikzcd}
 \end{document}
